--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "sonner": "^2.0.1",
     "svix": "^1.61.4",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
